[package]
name = "mdbook-clever"
version = "0.1.0"
edition = "2024"

[dependencies]
logos = "0.15.0"
mdbook = { version = "0.4.47", default-features = false }
nom = "7.1.3"
pulldown-cmark = "0.13.0"
pulldown-cmark-to-cmark = "21.0.0"
serde_json = "1.0.140"
xml-rs = "0.8.25"
mdbook-fiction-tools = { git = "https://github.com/chorman0773/mdbook-fiction-tools", features = [
    "xhtml",
] }
